--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MiraiHw</string>
     <string name="staff">STAFF</string>
+    <string name="leave_page">leave page</string>
 </resources>
