[Refactor] error and empty response string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MiraiHw</string>
     <string name="staff">STAFF</string>
     <string name="leave_page">leave page</string>
+    <string name="load_empty_data">Load empty data</string>
 </resources>
